--- a/main.html
+++ b/main.html
@@ -38,7 +38,13 @@
             <img class="action-image" src="Assets/wc-mini.png" alt="">
             </div>
         </div>
-      
+      <div>
+        <div>
+            <div>
+
+            </div>
+        </div>
+      </div>
 
     </main>
     <footer>
